--- a/cocohappy.html
+++ b/cocohappy.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>粒子爱心与文字动画</title>
+    <title>粒子汇聚爱心轮廓与文字</title>
     <style>
         body {
             margin: 0;
-            background: #000;
             overflow: hidden;
+            background-color: #000;
         }
         canvas {
             display: block;
@@ -16,68 +16,63 @@
     </style>
 </head>
 <body>
-    <canvas id="canvas"></canvas>
+    <canvas id="particleCanvas"></canvas>
 
     <script>
         // 获取画布并设置尺寸
-        const canvas = document.getElementById('canvas');
+        const canvas = document.getElementById('particleCanvas');
         const ctx = canvas.getContext('2d');
-        let width = window.innerWidth;
-        let height = window.innerHeight;
 
-        // 适配窗口大小
+        // 设置画布尺寸为窗口大小
         function resizeCanvas() {
-            width = window.innerWidth;
-            height = window.innerHeight;
-            canvas.width = width;
-            canvas.height = height;
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
         }
         resizeCanvas();
         window.addEventListener('resize', resizeCanvas);
 
         // 颜色方案
         const COLORS = [
-            'rgb(255, 99, 71)',
-            'rgb(255, 165, 0)',
-            'rgb(255, 105, 97)',
-            'rgb(255, 182, 193)',
-            'rgb(255, 20, 147)',
-            'rgb(138, 43, 226)'
+            [255, 99, 71], [255, 165, 0], [255, 105, 97],
+            [255, 182, 193], [255, 20, 147], [138, 43, 226]
         ];
 
         // 粒子类
         class Particle {
             constructor(phase = 0) {
-                // 初始位置（窗口边缘）
-                const edge = Math.floor(Math.random() * 4);
-                if (edge === 0) { // 上
-                    this.x = Math.random() * width;
+                // 初始位置 - 从屏幕边缘随机生成
+                const edge = ['top', 'bottom', 'left', 'right'][Math.floor(Math.random() * 4)];
+                if (edge === 'top') {
+                    this.x = Math.random() * canvas.width;
                     this.y = 0;
-                } else if (edge === 1) { // 下
-                    this.x = Math.random() * width;
-                    this.y = height;
-                } else if (edge === 2) { // 左
+                } else if (edge === 'bottom') {
+                    this.x = Math.random() * canvas.width;
+                    this.y = canvas.height;
+                } else if (edge === 'left') {
                     this.x = 0;
-                    this.y = Math.random() * height;
-                } else { // 右
-                    this.x = width;
-                    this.y = Math.random() * height;
+                    this.y = Math.random() * canvas.height;
+                } else {
+                    this.x = canvas.width;
+                    this.y = Math.random() * canvas.height;
                 }
 
                 // 粒子属性
                 this.size = 1.8 + Math.random() * 1.2; // 1.8-3像素
                 this.color = COLORS[Math.floor(Math.random() * COLORS.length)];
                 this.speed = 1.2 + Math.random() * 2;
-                this.phase = phase; // 0:爱心阶段, 1:文字阶段
-                this.targetIdx = Math.floor(Math.random() * 360);
+                this.phase = phase;
+                this.targetIdx = 0;
+                this.alpha = 255;
                 this.arrived = false;
+
+                // 初始分配目标点
+                const targetPoints = phase === 0 ? lovePoints : textPoints;
+                this.targetIdx = Math.floor(Math.random() * targetPoints.length);
             }
 
             // 更新位置
             update(lovePoints, textPoints) {
                 const targetPoints = this.phase === 0 ? lovePoints : textPoints;
-
-                // 确保目标索引有效
                 if (this.targetIdx >= targetPoints.length) {
                     this.targetIdx = Math.floor(Math.random() * targetPoints.length);
                 }
@@ -100,131 +95,148 @@
                     this.x += (dx / distance) * this.speed;
                     this.y += (dy / distance) * this.speed;
                 }
+
+                return true;
             }
 
             // 绘制粒子
             draw() {
-                // 绘制光晕
                 if (this.arrived) {
+                    // 绘制光晕
                     ctx.beginPath();
-                    ctx.fillStyle = this.color.replace('rgb', 'rgba').replace(')', ', 0.15)');
                     ctx.arc(this.x, this.y, this.size * 2, 0, Math.PI * 2);
+                    ctx.fillStyle = `rgba(${this.color[0]}, ${this.color[1]}, ${this.color[2]}, 0.15)`;
                     ctx.fill();
                 }
 
-                // 绘制粒子本体
+                // 绘制粒子本身
                 ctx.beginPath();
-                ctx.fillStyle = this.color;
                 ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+                ctx.fillStyle = `rgb(${this.color[0]}, ${this.color[1]}, ${this.color[2]})`;
                 ctx.fill();
             }
         }
 
-        // 生成爱心轨迹点
-        function getLovePoints() {
+        // 生成爱心轮廓点（只保留轮廓，移除内部点）
+        function generateLovePoints() {
             const points = [];
-            const scale = Math.min(width, height) / 50; // 自适应缩放
-            const centerX = width / 2;
-            const centerY = height / 2 - scale * 2;
+            const centerX = canvas.width / 2;
+            const centerY = canvas.height / 2 - 80;
+            const scale = 16;
 
-            for (let angle = 0; angle < 360; angle++) {
+            // 生成密集的爱心轮廓点（增加角度采样密度）
+            for (let angle = 0; angle < 360; angle += 0.5) {  // 每0.5度取一个点，使轮廓更平滑
                 const t = angle * Math.PI / 180;
                 const x = 16 * Math.pow(Math.sin(t), 3);
-                const y = -(13 * Math.cos(t) - 5 * Math.cos(2*t) - 2 * Math.cos(3*t) - Math.cos(4*t));
+                const y = -(13 * Math.cos(t) - 5 * Math.cos(2 * t) - 2 * Math.cos(3 * t) - Math.cos(4 * t));
+
                 points.push([centerX + x * scale, centerY + y * scale]);
             }
+
+            // 添加一些额外的轮廓点，确保线条更连续
+            for (let i = 0; i < 500; i++) {
+                const angle = Math.random() * 360;
+                const t = angle * Math.PI / 180;
+                const x = 16 * Math.pow(Math.sin(t), 3);
+                const y = -(13 * Math.cos(t) - 5 * Math.cos(2 * t) - 2 * Math.cos(3 * t) - Math.cos(4 * t));
+
+                // 微小的随机偏移，使轮廓更自然
+                const jitter = (Math.random() - 0.5) * 2;
+                points.push([centerX + x * scale + jitter, centerY + y * scale + jitter]);
+            }
+
             return points;
         }
 
-        // 生成文字轨迹点（使用离屏canvas绘制文字）
-        function getTextPoints() {
-            const text = "珂珂永远开心";
-            const charSpacing = 120; // 字间距
-            const fontSize = Math.min(width, height) / 10; // 自适应字体大小
-
-            // 创建离屏canvas用于文字采样
-            const offscreenCanvas = document.createElement('canvas');
-            const offscreenCtx = offscreenCanvas.getContext('2d');
-
-            // 计算总宽度
-            const totalWidth = (text.length - 1) * charSpacing;
-            const startX = width / 2 - totalWidth / 2;
-            const startY = height / 2 + fontSize / 3;
-
+        // 生成文字形状的点
+        function generateTextPoints() {
             const points = [];
+            const text = "珂珂永远开心";
+            const charSpacing = 160;
+            const startX = canvas.width / 2 - (charSpacing * (text.length - 1)) / 2;
+            const yPos = canvas.height / 2 + 50;
 
-            // 逐个绘制文字
+            // 创建一个临时画布用于文字采样
+            const textCanvas = document.createElement('canvas');
+            const textCtx = textCanvas.getContext('2d');
+            textCanvas.width = canvas.width;
+            textCanvas.height = canvas.height;
+
+            // 绘制文字到临时画布
+            textCtx.font = "bold 120px 'SimHei', 'Microsoft YaHei', sans-serif";
+            textCtx.textAlign = 'center';
+            textCtx.textBaseline = 'middle';
+            textCtx.fillStyle = 'white';
+
             for (let i = 0; i < text.length; i++) {
-                const char = text[i];
-                const x = startX + i * charSpacing;
+                const charX = startX + i * charSpacing;
+                textCtx.fillText(text[i], charX, yPos);
+            }
 
-                // 设置字体
-                offscreenCtx.font = `bold ${fontSize}px "SimHei", "Microsoft YaHei", sans-serif`;
-                const charWidth = offscreenCtx.measureText(char).width;
-                const charHeight = fontSize * 1.2;
+            // 从临时画布采样点
+            const imageData = textCtx.getImageData(0, 0, canvas.width, canvas.height);
+            const pixelData = imageData.data;
 
-                // 调整canvas大小
-                offscreenCanvas.width = charWidth + 20;
-                offscreenCanvas.height = charHeight + 20;
-
-                // 绘制文字到离屏canvas
-                offscreenCtx.clearRect(0, 0, offscreenCanvas.width, offscreenCanvas.height);
-                offscreenCtx.font = `bold ${fontSize}px "SimHei", "Microsoft YaHei", sans-serif`;
-                offscreenCtx.fillStyle = 'white';
-                offscreenCtx.fillText(char, 10, charHeight);
-
-                // 采样文字像素
-                const imageData = offscreenCtx.getImageData(0, 0, offscreenCanvas.width, offscreenCanvas.height);
-                const pixels = imageData.data;
-
-                // 每2像素采样一次
-                for (let y = 0; y < offscreenCanvas.height; y += 2) {
-                    for (let x = 0; x < offscreenCanvas.width; x += 2) {
-                        const index = (y * offscreenCanvas.width + x) * 4;
-                        if (pixels[index + 3] > 100) { // 只取不透明像素
-                            points.push([
-                                x - 10 + startX + i * charSpacing,
-                                y - charHeight + startY
-                            ]);
-                        }
+            // 每隔2像素采样一次
+            for (let y = 0; y < canvas.height; y += 2) {
+                for (let x = 0; x < canvas.width; x += 2) {
+                    const index = (y * canvas.width + x) * 4;
+                    if (pixelData[index + 3] > 100) { // 检查alpha值
+                        points.push([x, y]);
                     }
                 }
+            }
 
-                // 补充内部点
+            // 补充内部点使文字更饱满
+            for (let i = 0; i < text.length; i++) {
+                const charX = startX + i * charSpacing;
                 for (let j = 0; j < 250; j++) {
-                    const px = x - charWidth/2 + Math.random() * charWidth;
-                    const py = startY - charHeight/2 + Math.random() * charHeight;
-                    points.push([px, py]);
+                    const x = charX - 50 + Math.random() * 100;
+                    const y = yPos - 50 + Math.random() * 100;
+                    points.push([x, y]);
                 }
             }
 
             return points;
         }
 
-        // 初始化
-        const lovePoints = getLovePoints();
-        const textPoints = getTextPoints();
+        // 初始化点集合
+        let lovePoints = generateLovePoints();
+        let textPoints = generateTextPoints();
+
+        // 监听窗口大小变化，重新生成点
+        window.addEventListener('resize', () => {
+            lovePoints = generateLovePoints();
+            textPoints = generateTextPoints();
+        });
+
+        // 创建粒子
         let particles = [];
-        for (let i = 0; i < 3500; i++) {
+        for (let i = 0; i < 3000; i++) {
             particles.push(new Particle());
         }
 
-        // 动画控制
-        let phase = 0; // 0:爱心阶段, 1:文字阶段
-        let phaseTimer = 0;
+        // 动画状态变量
         let bgAlpha = 0;
+        let phase = 0; // 0: 爱心, 1: 文字
+        let phaseTimer = 0;
 
         // 动画循环
         function animate() {
             requestAnimationFrame(animate);
 
-            // 绘制背景
-            ctx.fillStyle = `rgba(0, 0, 0, ${bgAlpha})`;
-            ctx.fillRect(0, 0, width, height);
-            if (bgAlpha < 0.9) bgAlpha += 0.005;
-
-            // 阶段控制（7秒后切换）
             phaseTimer++;
+
+            // 绘制背景
+            ctx.fillStyle = `rgba(0, 0, 0, ${bgAlpha / 255})`;
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+            // 逐渐增加背景不透明度
+            if (bgAlpha < 230) {
+                bgAlpha += 1;
+            }
+
+            // 7秒(420帧)后切换到文字
             if (phaseTimer > 420 && phase === 0) {
                 phase = 1;
                 particles.forEach(p => {
@@ -234,16 +246,18 @@
                 });
             }
 
-            // 更新并绘制粒子
+            // 更新和绘制所有粒子
             particles.forEach(p => {
                 p.update(lovePoints, textPoints);
                 p.draw();
             });
 
-            // 补充粒子
+            // 随机添加新粒子
             if (Math.random() < 0.5) {
-                particles.push(new Particle(phase));
-                if (particles.length > 4500) {
+                const newParticle = new Particle(phase);
+                particles.push(newParticle);
+                // 限制最大粒子数量
+                if (particles.length > 4000) {
                     particles.shift();
                 }
             }
