--- a/aixin.html
+++ b/aixin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>李峋的爱心代码</title>
+    <title>魏珂珂</title>
     <style>
         body {
             margin: 0;
